# VK_marketplace

./: .env  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml
backend/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  mypy.ini  prestart.sh  pyproject.toml  start-tests.sh  start.sh
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 902947644c6c_.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: adverts.py  images.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: __init__.py  base.py  crud_advert.py  crud_image.py  crud_user.py
backend/app/db/: base.py  init_db.py
backend/app/middleware/: logger.py  logging.py
backend/app/models/: __init__.py  advert.py  user.py
backend/app/schemas/: __init__.py  advert.py  user.py
backend/app/tests/: conftest.py  test_main.py
backend/app/tests/api/: test_adverts.py  test_images.py  test_users.py
backend/app/tests/crud/: test_advert.py  test_image.py  test_user.py
backend/app/tests/utils/: advert.py  data.py  user.py
backend/app/utils/: image_ops.py  package_info.py
backend/scripts/: lint.sh
frontend/: .dockerignore  .env  .eslintrc.json  .gitignore  Dockerfile  config-overrides.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  eruda.js  index.jsx
frontend/src/api/: http.js  (+6 more)
(+40 files in other folders)
