[tool.poetry]
name = "CyberDAS VK Marketplace"
description = "Барахолка CyberDAS"
version = "0.1.0"
license = "MIT"
authors = ["Ivan Akostelov <payne@cyberdas.net>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.11.3"
fastapi = "^0.68.1"
requests = "^2.23.0"
tenacity = "^6.1.0"
pydantic = "^1.4"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
sqlalchemy-utils = "^v0.37.3"
toml = "^0.10.2"
structlog = "^21.1.0"
python-json-logger = "^2.0.2"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
types-toml = "^0.10.1"
pytest-cov = "^2.8.1"
pre-commit = "^2.15.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
